Support JDK 11 (#871)
Close threatgrid/iroh#3132

§ QA
Please test all functionality. This commit upgrades many dependencies which may have unexpected results beyond our unit tests.

§ Release Notes

intern: update dependencies and test JDK 11

§ Squashed Commits

Notes:
Depends on:

threatgrid/clj-momo#67
threatgrid/ctim#269
See also:

threatgrid/iroh#3143 (uses above PR's)